Fix: section gap 믹스인 추가 및 모바일 구간 스타일 수정

--- a/assets/scss/base/_preset.scss
+++ b/assets/scss/base/_preset.scss
@@ -244,14 +244,55 @@ iframe {
   }
 }
 
+@media screen and (max-width: 991px) {
+  .common-scroll-move__text-wrap {
+    font-size: 140px;
+  }
+  .common-paragraph {
+    &__description {
+      font-size: 40px;
+    }
+  }
+  .common-video__play-btn {
+    width: 80px;
+    height: 80px;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .common-inner {
     padding: 0 40px;
+  }
+  .common-paragraph {
+    &__title {
+      margin-right: 4em;
+    }
+  }
+  .common-video__control {
+    width: 40px;
+    height: 40px;
   }
 }
 
 @media screen and (max-width: 479px) {
   .common-inner {
     padding: 0 6vw;
+  }
+  .common-scroll-move__text-wrap {
+    font-size: 120px;
+  }
+  .common-paragraph {
+    &__description {
+      font-size: 30px;
+    }
+  }
+  .common-video__controls {
+    top: 6vw;
+    right: 6vw;
+  }
+  .common-video__control {
+    img {
+      width: 16px;
+    }
   }
 }
